# TargetScriptAI

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_llm_service.py  test_orchestrator.py
app/: main.py
app/agents/: __init__.py  base.py  creative_agent.py  orchestrator.py  persona_agent.py  qa_agent.py  strategy_agent.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: generate.py  health.py  personas.py
app/config/: __init__.py  logging.py  settings.py
app/models/: __init__.py  content.py  personas.py  requests.py  responses.py
app/services/: __init__.py  llm_service.py  persona_service.py
app/utils/: __init__.py  helpers.py  token_counter.py  validators.py
data/personas/: default_personas.json
frontend/: app.py
frontend/components/: sidebar.py
frontend/pages/: Analytics.py  Content_Config.py  Generation.py  Persona_Selection.py
frontend/utils/: api_client.py
tests/: test_agents.py
