[project]
name = "targetscriptai"
version = "0.1.0"
description = "Multi-agent AI marketing content generator powered by LangGraph and Groq"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kushan dave", email = "itzkushan@gmail.com" }
]
keywords = ["ai", "marketing", "content-generation", "langgraph", "groq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Agent Orchestration (no CrewAI for now)
    "langgraph==0.2.16",
    
    # LLM Execution
    "groq==0.4.1",
    "langchain-groq==0.1.9",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    
    # Backend
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy>=2.0.27",
    "alembic==1.13.1",
    
    # Frontend
    "streamlit==1.39.0",
    "plotly==5.17.0",
    "kaleido==0.2.1",
    
    # LLMOps & Observability
    "structlog>=23.1.0",
    "prometheus-client>=0.19.0",
    
    # Core Dependencies
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    
    # Document Processing
    "python-docx>=1.1.0",
    "pypdf2>=3.0.1",
    
    # AI/ML
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

# Future optional dependency group for CrewAI when conflicts are resolved
experimental = [
    # "crewai==0.55.2",  # Add back when compatible
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "groq.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true
